# nextcloud-talk-notetaker

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  notetaker.service  pyproject.toml  setup.sh
src/notetaker/: config.py  mailer.py  main.py  monitor.py  participants.py  recorder.py  storage.py  transcriber.py
tests/: test_config.py  test_login_verification.py  test_mailer.py  test_main.py  test_monitor.py  test_participants.py  test_recorder.py  test_speaker_timeline.py  test_storage.py  test_transcriber.py
