[project]
name = "nextcloud-talk-notetaker"
version = "0.1.0"
description = "AI meeting notes for Nextcloud Talk calls"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "google-genai>=1.0",
    "playwright>=1.40",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "responses>=0.25",
]

[project.scripts]
notetaker = "notetaker.main:main"
